<resources>
    <string name="app_name">TallerListView</string>
    <string name="options_title">OPTIONS</string>
    <string name="areas">AREAS</string>
    <string name="volumes">VOLUMES</string>
    <string name="operations">OPERATIONS DONE</string>

    <string-array name="opts_array">
        <item>@string/areas</item>
        <item>@string/volumes</item>
        <item>@string/operations</item>
    </string-array>

    <string name="square">SQUARE</string>
    <string name="rectangle">RECTANGLE</string>
    <string name="triangle">TRIANGLE</string>
    <string name="circle">CIRCLE</string>

    <string-array name="area_opts">
        <item>@string/square</item>
        <item>@string/rectangle</item>
        <item>@string/triangle</item>
        <item>@string/circle</item>
    </string-array>

    <string name="sphere">SPHERE</string>
    <string name="cylinder">CYLINDER</string>
    <string name="cone">CONE</string>
    <string name="cube">CUBE</string>

    <string-array name="vol_opts">
        <item>@string/sphere</item>
        <item>@string/cylinder</item>
        <item>@string/cone</item>
        <item>@string/cube</item>
    </string-array>

    <string name="num">N.</string>
    <string name="operation">OPERATION</string>
    <string name="data">DATA</string>
    <string name="result">RESULT</string>
    <string name="lbl_side_input">SIDE VALUE</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">CLEAR</string>
    <string name="lbl_base_input">BASE VALUE</string>
    <string name="lbl_height_input">HEIGHT VALUE</string>
    <string name="lbl_radius_input">RADIUS VALUE</string>
    <string name="square_area">SQUARE AREA</string>
    <string name="rect_area">RECTANGLE AREA</string>
    <string name="tri_area">TRIANGLE AREA</string>
    <string name="circle_area">CIRCLE AREA</string>
    <string name="side">SIDE</string>
    <string name="base" translatable="false">BASE</string>
    <string name="height">HEIGHT</string>
    <string name="radius">RADIUS</string>
    <string name="empty_error">Enter a value</string>
    <string name="zero_value">Enter a non-zero value</string>
    <string name="cube_volume">CUBE VOLUME</string>
    <string name="cylinder_volume">CYLINDER VOLUME</string>
    <string name="cone_volume">CONE VOLUME</string>
    <string name="sphere_volume">SPHERE VOLUME</string>
    <string name="done">DONE</string>
    <string name="area">AREA:</string>
    <string name="volume">VOLUME:</string>
    <string name="ok" translatable="false">OK</string>
</resources>