<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListOperations">

    <TextView
        android:id="@+id/lblOpsDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operations"
        android:textAlignment="center"
        android:textColor="#4A148C"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tblOpsDone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/trOps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/lblNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="#6E0E88"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/operation"
                android:textColor="#6E0E88"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/data"
                android:textColor="#6E0E88"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblRslt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="#6E0E88"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</LinearLayout>