<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calculate">

    <TextView
        android:id="@+id/lblTitleOp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="txt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4A148C"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/grpVar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblVar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="#6E0E88"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtVar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpVar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/lblVar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_height_input"
            android:textColor="#6E0E88"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtVar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/calculate"
            android:textColor="#6E0E88"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#6E0E88"
            android:onClick="clear"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textAlignment="center"
        android:textColor="#6E0E88"
        android:textSize="36sp" />
</LinearLayout>